samples/_failures_safe/1761459875_3a50e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27ec8358.c: In function ‘main’:
./samples/SAFE/__tmp_27ec8358.c:171:5: error: expected declaration or statement at end of input
  171 |     }
      |     ^
